ver meu projeto

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <ul>
             <li>
-                <a href="#" target="_blank">Ver meu portfólio</a>
+                <a href="https://github.com/AlexGiani" target="_blank">Ver meu portfólio</a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/alexander-afonso-giani-81b371204" target="_blank">Ver meu linkedin</a>
