add link logo github

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </ul>
         <div id="social-links">
 
-            <a href="https://github.com/AlexGiani/projeto/tree/main/.vscode" target="_blank">
+            <a href="https://github.com/AlexGiani/projeto" target="_blank">
              <ion-icon name="logo-github"></ion-icon> </a>
 
             <a href="https://www.linkedin.com/in/alexander-afonso-giani-81b371204" target="_blank">
